# grootzero

./: README.md  pyproject.toml  requirements.txt
config/: default_config.yaml
examples/: basic_sim_test.py
examples/azr/: basic_learning_loop_test.py  reinforcement_learning_test.py
examples/groot_n1/: basic_mock_test.py
reports/: planning_refinement_report.md  step_1_report.md  step_2_detailed_project_plan.md  task_1_1_report.md  task_1_2_report.md  task_1_3_report.md  task_1_4_report.md  task_1_5_report.md
src/grootzero/: __init__.py  config.py  logging.py
src/grootzero/azr/: __init__.py  orchestrator.py  rewards.py
src/grootzero/groot_n1/: __init__.py  interface.py  mock.py
src/grootzero/simulation/: __init__.py  environment.py  utils.py
tests/: test_config.py  test_groot_n1.py  test_simulation.py
tests/azr/: test_orchestrator.py  test_rewards.py  test_rl_feedback.py
